tweaked error code spacing for repair column

--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/components/errorCodeTable/errorCodeTable.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_base/less/components/errorCodeTable/errorCodeTable.less
@@ -8,17 +8,19 @@
 }
 
 .tbl-col-error-code {
-	width: 110px;
+	min-width: 110px;
 }
 
-.tbl-col-condition {}
+.tbl-col-condition {
+	width: 50%;
+}
 
 .tbl-col-check-repair {
-	width: 180px;
+	width: 50%;
 }
 
 .tbl-col-show-parts {
-	width: 180px;
+	min-width: 180px;
 }
 
 .errorCodesTable {
